<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">
        <!--标题-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_ui_title"
            android:textSize="28sp"
            android:textColor="#f1ff0d00"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:layout_weight="1">
        <!--内容-->
        <TextView
            android:text="@string/login_user_name"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_reg_userId"
            android:hint="@string/login_user_hint"
            android:textSize="20sp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:layout_weight="1">
        <!--内容-->
        <TextView
            android:text="@string/login_password"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_reg_password"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint"
            android:textSize="20sp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:layout_weight="1">
        <!--验证码-->
        <TextView
            android:id="@+id/tv_reg_ui"
            android:text="@string/reg_ui_tv"
            android:textSize="18sp"
            android:textColor="#00ff00"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_reg_checkCode"
            android:hint="@string/reg_ui_editText"
            android:textSize="18sp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_reg_checkCode"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textStyle="italic|bold"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="2">
        <!--按钮-->
        <Button
            android:id="@+id/btn_reg_id"
            android:text="@string/btn_reg"
            android:textSize="20sp"
            android:textColor="#0022ff"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_exit_reg"
            android:text="@string/btn_exit"
            android:textSize="20sp"
            android:textColor="#0022ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>